# rust-zk-playground

./: .gitignore  Cargo.toml  README.md
01-arithmetic/src/: main.rs
01-arithmetic/src/circuits/: mul.rs
01-zk-hello-world/: Cargo.toml
01-zk-hello-world/src/: main.rs
01-zk-hello-world/src/circuits/: add_one.rs  chained.rs  mod.rs  mul.rs
02-range-check/src/: main.rs
03-hash-preimage/: Cargo.toml
03-hash-preimage/src/: lib.rs
03-hash-preimage/src/circuits/: mod.rs  poseidon_hash.rs  poseidon_hash_circuit.rs  poseidon_hash_gadget.rs  toy_hash.rs  toy_hash1_circuit.rs  toy_hash2_circuit.rs  toy_hash_circuit.rs  toy_hash_gadget.rs
03-hash-preimage/src/poseidon/: gadget.rs  native.rs  spec.rs
03-hash-preimage/src/sponge/: gadget.rs  mod.rs  native.rs
03-hash-preimage/src/toy_hash/: gadget.rs  mod.rs  native.rs  spec.rs
03-r1cs-control-flow/: Cargo.toml
03-r1cs-control-flow/src/circuits/: array_select.rs  array_update.rs  mod.rs  neq.rs  one_hot.rs
03-r1cs-control-flow/src/gadgets/: array_select.rs  cond.rs  first_difference.rs  mod.rs  mux.rs  nonzero.rs
04-hash-preimage/: Cargo.toml
04-hash-preimage/src/poseidon/: gadget.rs
04-hash-preimage/src/sponge/: gadget.rs
04-merkle-membership/: Cargo.toml
04-merkle-membership/src/: lib.rs
04-merkle-membership/src/circuits/: merkle_membership.rs  mod.rs
04-merkle-membership/src/merkle/: gadget.rs  native.rs  spec.rs
05-merkle-membership/src/merkle/: gadget.rs  (+1 more)
05-merkle-update/: Cargo.toml
06-merkle-ordered-update/: Cargo.toml
06-merkle-ordered-update/src/: circuit.rs
06-merkle-update/src/: circuit.rs
07-merkle-ordered-update/: Cargo.toml
07-merkle-ordered-update/src/: circuit.rs
07-merkle-transfer-kernel/: Cargo.toml
08-merkle-transfer-kernel/: Cargo.toml
08-merkle-transfer-kernel/src/: circuit.rs  gadget.rs
08-merkle-transfer-kernel/tests/: balance.rs  one_hot.rs  roots.rs
09-nullifiers/: Cargo.toml
09-nullifiers/src/: circuit.rs  lib.rs
09-nullifiers/tests/: circuit_tests.rs  commitment_tests.rs  mod.rs  nullifier_tests.rs
10-merkle-non-membership/: Cargo.toml
10-non-membership/: Cargo.toml
11-signatures/: Cargo.toml
11-signatures/src/: circuit.rs  lib.rs
12-batch-transfers/: Cargo.toml
12-batch-transfers/src/: circuit.rs  spec.rs
12-batch-transfers/tests/: common.rs  single_transfer.rs
13-integrated-spend/: Cargo.toml
13-integrated-spend/src/: circuit.rs  lib.rs  spec.rs
arkworks/: Cargo.toml
arkworks/01-arithmetic/: Cargo.toml
arkworks/01-arithmetic/src/: lib.rs
arkworks/01-arithmetic/src/circuits/: add_one.rs  chained.rs  mul.rs
arkworks/02-range-check/: Cargo.toml
arkworks/02-range-check/src/: main.rs
arkworks/03-r1cs-control-flow/: Cargo.toml
arkworks/03-r1cs-control-flow/src/circuits/: array_select.rs  array_update.rs  first_difference.rs  mux.rs  neq.rs  nonzero.rs  one_hot.rs
arkworks/03-r1cs-control-flow/src/gadgets/: array_select.rs  array_update.rs  bool.rs  cond.rs  first_difference.rs  mux.rs  neq.rs  nonzero.rs  one_hot.rs
arkworks/04-hash-preimage/: Cargo.toml
arkworks/04-hash-preimage/src/circuits/: mod.rs  poseidon_hash.rs  toy_hash.rs
arkworks/04-hash-preimage/src/poseidon/: native.rs  spec.rs
arkworks/04-hash-preimage/src/sponge/: gadget.rs  native.rs
arkworks/04-hash-preimage/src/toy_hash/: native.rs
arkworks/05-merkle-membership/: Cargo.toml
arkworks/05-merkle-membership/src/circuits/: merkle_membership.rs
arkworks/05-merkle-membership/src/merkle/: gadget.rs  native.rs
arkworks/06-merkle-update/: Cargo.toml
arkworks/06-merkle-update/src/: circuit.rs
arkworks/07-merkle-ordered-update/: Cargo.toml
arkworks/07-merkle-ordered-update/src/: circuit.rs
arkworks/08-merkle-transfer-kernel/: Cargo.toml
arkworks/08-merkle-transfer-kernel/src/: circuit.rs  lib.rs
arkworks/08-merkle-transfer-kernel/tests/: basic.rs  divergence.rs  indices.rs  mod.rs  one_hot.rs  polarity.rs
arkworks/09-nullifiers/: Cargo.toml
arkworks/09-nullifiers/src/: circuit.rs
arkworks/09-nullifiers/src/commitment/: native.rs  spec.rs
arkworks/09-nullifiers/src/nullifier/: native.rs  spec.rs
arkworks/09-nullifiers/tests/: circuit_tests.rs  commitment_tests.rs
arkworks/10-non-membership/: Cargo.toml
arkworks/10-non-membership/src/: lib.rs
arkworks/10-non-membership/src/smt/: mod.rs  spec.rs  tree.rs
arkworks/10-non-membership/src/sorted/: gadget.rs  native.rs
arkworks/10-non-membership/tests/: mod.rs
arkworks/10-non-membership/tests/smt/: adversarial.rs  circuit.rs  edge_cases.rs  gadget_adversarial.rs  gadget_native.rs  mod.rs  native.rs  tree.rs
arkworks/10-non-membership/tests/sorted/: adversarial.rs  circuit.rs  gadget.rs  mod.rs  native.rs
arkworks/11-signatures/: Cargo.toml
arkworks/11-signatures/src/curve/: gadget.rs  mod.rs  scalar.rs  spec.rs
arkworks/11-signatures/src/eddsa/: gadget.rs  native.rs  spec.rs
arkworks/12-batch-transfers/: Cargo.toml
arkworks/12-batch-transfers/src/: spec.rs
arkworks/12-batch-transfers/tests/: adversarial.rs  batch_cases.rs  common.rs  single_transfer.rs
arkworks/13-integrated-spend/: Cargo.toml
arkworks/13-integrated-spend/src/: circuit.rs  spec.rs
halo2/: Cargo.toml
halo2/01-arithmetic/: Cargo.toml
(+33 files in other folders)
