[package]
name = "merkle-non-membership"
version = "0.1.0"
edition = "2024"

[dependencies]
ark-ff = "0.5.0"
ark-relations = "0.5.1"
ark-bls12-381 = "0.5.0"
hash-preimage = { path = "../04-hash-preimage" }
merkle-membership = { path = "../05-merkle-membership" }

[dev-dependencies]
rand = "0.8"
rand_core = "0.6"
ark-std = "0.5.0"
