[package]
name = "integrated-spend"
version = "0.1.0"
edition = "2024"

[dependencies]
ark-ff = "0.5.0"
ark-relations = "0.5.1"
ark-bls12-381 = "0.5.0"
hash-preimage = { path = "../04-hash-preimage" }
merkle-transfer-kernel = { path = "../08-merkle-transfer-kernel" }
merkle-membership = { path = "../05-merkle-membership" }
nullifiers = { path = "../09-nullifiers" }
signatures = { path = "../11-signatures" }
non-membership = { path = "../10-non-membership" }
batch-transfers = { path = "../12-batch-transfers" }

[dev-dependencies]
rand = "0.8"
rand_core = "0.6"
ark-std = "0.5.0"
ark-groth16 = "0.5.0"
