[package]
name = "range-check"
version = "0.1.0"
edition.workspace = true

[dependencies]
ark-std.workspace = true
ark-ff.workspace = true
ark-ec.workspace = true
ark-relations.workspace = true
ark-groth16.workspace = true
ark-bls12-381.workspace = true
rand.workspace = true
rand_core.workspace = true
