[package]
name = "merkle-membership"
version = "0.1.0"
edition.workspace = true

[dependencies]
ark-ff.workspace = true
ark-relations.workspace = true
ark-bls12-381.workspace = true
hash-preimage.workspace = true

[dev-dependencies]
ark-std.workspace = true
rand.workspace = true
rand_core.workspace = true
ark-groth16.workspace = true
