[package]
edition.workspace = true

name = "merkle-transfer-kernel"
version = "0.1.0"
[dependencies]
ark-ff.workspace = true
ark-relations.workspace = true
ark-bls12-381.workspace = true
hash-preimage.workspace = true
merkle-membership.workspace = true

[dev-dependencies]
ark-std.workspace = true
rand.workspace = true
rand_core.workspace = true
ark-groth16.workspace = true
