[package]
name = "non-membership"
version = "0.1.0"
edition.workspace = true


[dependencies]
ark-ff.workspace = true
ark-relations.workspace = true
ark-bls12-381.workspace = true
hash-preimage.workspace = true
merkle-membership.workspace = true

[dev-dependencies]
rand.workspace = true
rand_core.workspace = true
ark-std.workspace = true
ark-groth16.workspace = true
