[package]
name = "signatures"
version = "0.1.0"
edition = "2024"


[dependencies]
ark-ff = "0.5.0"
ark-relations = "0.5.1"
ark-bls12-381 = "0.5.0"
hash-preimage = { path = "../04-hash-preimage" }
num-bigint = "0.4.6"
num-traits = "0.2.19"

[dev-dependencies]
rand = "0.8"
rand_core = "0.6"
ark-std = "0.5.0"
ark-groth16 = "0.5.0"
