[package]
name = "signatures"
version = "0.1.0"
edition.workspace = true

[dependencies]
ark-ff.workspace = true
ark-relations.workspace = true
ark-bls12-381.workspace = true
hash-preimage.workspace = true
num-bigint.workspace = true
num-traits.workspace = true

[dev-dependencies]
rand.workspace = true
rand_core.workspace = true
ark-std.workspace = true
ark-groth16.workspace = true
